src/grammar/EvaluacionFisherParser.cpp

// Generated from src/grammar/EvaluacionFisher.g4 by ANTLR 4.12.0


#include "EvaluacionFisherListener.h"

#include "EvaluacionFisherParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct EvaluacionFisherParserStaticData final {
  EvaluacionFisherParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  EvaluacionFisherParserStaticData(const EvaluacionFisherParserStaticData&) = delete;
  EvaluacionFisherParserStaticData(EvaluacionFisherParserStaticData&&) = delete;
  EvaluacionFisherParserStaticData& operator=(const EvaluacionFisherParserStaticData&) = delete;
  EvaluacionFisherParserStaticData& operator=(EvaluacionFisherParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag evaluacionfisherParserOnceFlag;
EvaluacionFisherParserStaticData *evaluacionfisherParserStaticData = nullptr;

void evaluacionfisherParserInitialize() {
  assert(evaluacionfisherParserStaticData == nullptr);
  auto staticData = std::make_unique<EvaluacionFisherParserStaticData>(
    std::vector<std::string>{
      "sistema", "declaracion", "declaracionEmpleado", "atributoEmpleado", 
      "tipoCargo", "areaConstructora", "nivelRendimiento", "declaracionCriterio", 
      "tipoCriterio", "metricaCriterio", "declaracionGrupo", "listaEmpleados", 
      "evaluacion", "calculoFisher", "listaVariables", "variable", "evaluacionIndividual", 
      "criterioValoracion", "valoracion", "comparacionGrupos", "consulta", 
      "consultaEmpleado", "consultaRanking", "consultaEstadisticas", "consultaPrediccion"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "'{'", "'}'", "'('", "')'", "':'", "','"
    },
    std::vector<std::string>{
      "", "ESCALA_LIKERT", "EMPLEADO", "CRITERIO", "GRUPO", "FISHER", "EVALUAR", 
      "COMPARAR", "CONSULTAR", "RANKING", "ESTADISTICAS", "PREDECIR", "NOMBRE", 
      "CARGO", "EXPERIENCIA", "AREA", "RENDIMIENTO", "INGENIERO", "ARQUITECTO", 
      "SUPERVISOR", "OPERARIO", "TECNICO", "ADMINISTRATIVO", "ESTRUCTURAL", 
      "ACABADOS", "INSTALACIONES", "OBRA_CIVIL", "SEGURIDAD", "CALIDAD", 
      "ALTO", "MEDIO", "BAJO", "PESO", "TIPO", "METRICA", "CUANTITATIVO", 
      "CUALITATIVO", "MIXTO", "PRODUCTIVIDAD", "CALIDAD_TRABAJO", "SEGURIDAD_LABORAL", 
      "CUMPLIMIENTO_PLAZOS", "LIDERAZGO", "TRABAJO_EQUIPO", "CONOCIMIENTO_TECNICO", 
      "ADAPTABILIDAD", "ASISTENCIA", "MIEMBROS", "GRUPO_A", "GRUPO_B", "VARIABLES", 
      "USANDO", "CON", "DE", "POR", "PARA", "LIMITE", "ANOS", "LBRACE", 
      "RBRACE", "LPAREN", "RPAREN", "DOSPUNTOS", "COMA", "NUMERO", "CADENA", 
      "IDENTIFICADOR", "WS", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  evaluacionfisherParserStaticData = staticData.release();
}

}

EvaluacionFisherParser::EvaluacionFisherParser(TokenStream *input) : EvaluacionFisherParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

EvaluacionFisherParser::EvaluacionFisherParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  EvaluacionFisherParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *evaluacionfisherParserStaticData->atn, evaluacionfisherParserStaticData->decisionToDFA, evaluacionfisherParserStaticData->sharedContextCache, options);
}

EvaluacionFisherParser::~EvaluacionFisherParser() {
  delete _interpreter;
}

const atn::ATN& EvaluacionFisherParser::getATN() const {
  return *evaluacionfisherParserStaticData->atn;
}

std::string EvaluacionFisherParser::getGrammarFileName() const {
  return "EvaluacionFisher.g4";
}

const std::vector<std::string>& EvaluacionFisherParser::getRuleNames() const {
  return evaluacionfisherParserStaticData->ruleNames;
}

const dfa::Vocabulary& EvaluacionFisherParser::getVocabulary() const {
  return evaluacionfisherParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView EvaluacionFisherParser::getSerializedATN() const {
  return evaluacionfisherParserStaticData->serializedATN;
}


//----------------- SistemaContext ------------------------------------------------------------------

EvaluacionFisherParser::SistemaContext::SistemaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EvaluacionFisherParser::SistemaContext::EOF() {
  return getToken(EvaluacionFisherParser::EOF, 0);
}

std::vector<EvaluacionFisherParser::DeclaracionContext *> EvaluacionFisherParser::SistemaContext::declaracion() {
  return getRuleContexts<EvaluacionFisherParser::DeclaracionContext>();
}

EvaluacionFisherParser::DeclaracionContext* EvaluacionFisherParser::SistemaContext::declaracion(size_t i) {
  return getRuleContext<EvaluacionFisherParser::DeclaracionContext>(i);
}

std::vector<EvaluacionFisherParser::EvaluacionContext *> EvaluacionFisherParser::SistemaContext::evaluacion() {
  return getRuleContexts<EvaluacionFisherParser::EvaluacionContext>();
}

EvaluacionFisherParser::EvaluacionContext* EvaluacionFisherParser::SistemaContext::evaluacion(size_t i) {
  return getRuleContext<EvaluacionFisherParser::EvaluacionContext>(i);
}

std::vector<EvaluacionFisherParser::ConsultaContext *> EvaluacionFisherParser::SistemaContext::consulta() {
  return getRuleContexts<EvaluacionFisherParser::ConsultaContext>();
}

EvaluacionFisherParser::ConsultaContext* EvaluacionFisherParser::SistemaContext::consulta(size_t i) {
  return getRuleContext<EvaluacionFisherParser::ConsultaContext>(i);
}


size_t EvaluacionFisherParser::SistemaContext::getRuleIndex() const {
  return EvaluacionFisherParser::RuleSistema;
}

void EvaluacionFisherParser::SistemaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSistema(this);
}

void EvaluacionFisherParser::SistemaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSistema(this);
}

EvaluacionFisherParser::SistemaContext* EvaluacionFisherParser::sistema() {
  SistemaContext *_localctx = _tracker.createInstance<SistemaContext>(_ctx, getState());
  enterRule(_localctx, 0, EvaluacionFisherParser::RuleSistema);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(53);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case EvaluacionFisherParser::EMPLEADO:
        case EvaluacionFisherParser::CRITERIO:
        case EvaluacionFisherParser::GRUPO: {
          setState(50);
          declaracion();
          break;
        }

        case EvaluacionFisherParser::FISHER:
        case EvaluacionFisherParser::EVALUAR:
        case EvaluacionFisherParser::COMPARAR: {
          setState(51);
          evaluacion();
          break;
        }

        case EvaluacionFisherParser::CONSULTAR:
        case EvaluacionFisherParser::RANKING:
        case EvaluacionFisherParser::ESTADISTICAS:
        case EvaluacionFisherParser::PREDECIR: {
          setState(52);
          consulta();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(55); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4092) != 0));
    setState(57);
    match(EvaluacionFisherParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclaracionContext ------------------------------------------------------------------

EvaluacionFisherParser::DeclaracionContext::DeclaracionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EvaluacionFisherParser::DeclaracionEmpleadoContext* EvaluacionFisherParser::DeclaracionContext::declaracionEmpleado() {
  return getRuleContext<EvaluacionFisherParser::DeclaracionEmpleadoContext>(0);
}

EvaluacionFisherParser::DeclaracionCriterioContext* EvaluacionFisherParser::DeclaracionContext::declaracionCriterio() {
  return getRuleContext<EvaluacionFisherParser::DeclaracionCriterioContext>(0);
}

EvaluacionFisherParser::DeclaracionGrupoContext* EvaluacionFisherParser::DeclaracionContext::declaracionGrupo() {
  return getRuleContext<EvaluacionFisherParser::DeclaracionGrupoContext>(0);
}


size_t EvaluacionFisherParser::DeclaracionContext::getRuleIndex() const {
  return EvaluacionFisherParser::RuleDeclaracion;
}

void EvaluacionFisherParser::DeclaracionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaracion(this);
}

void EvaluacionFisherParser::DeclaracionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaracion(this);
}

EvaluacionFisherParser::DeclaracionContext* EvaluacionFisherParser::declaracion() {
  DeclaracionContext *_localctx = _tracker.createInstance<DeclaracionContext>(_ctx, getState());
  enterRule(_localctx, 2, EvaluacionFisherParser::RuleDeclaracion);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EvaluacionFisherParser::EMPLEADO: {
        enterOuterAlt(_localctx, 1);
        setState(59);
        declaracionEmpleado();
        break;
      }

      case EvaluacionFisherParser::CRITERIO: {
        enterOuterAlt(_localctx, 2);
        setState(60);
        declaracionCriterio();
        break;
      }

      case EvaluacionFisherParser::GRUPO: {
        enterOuterAlt(_localctx, 3);
        setState(61);
        declaracionGrupo();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclaracionEmpleadoContext ------------------------------------------------------------------

EvaluacionFisherParser::DeclaracionEmpleadoContext::DeclaracionEmpleadoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EvaluacionFisherParser::DeclaracionEmpleadoContext::EMPLEADO() {
  return getToken(EvaluacionFisherParser::EMPLEADO, 0);
}

tree::TerminalNode* EvaluacionFisherParser::DeclaracionEmpleadoContext::IDENTIFICADOR() {
  return getToken(EvaluacionFisherParser::IDENTIFICADOR, 0);
}

tree::TerminalNode* EvaluacionFisherParser::DeclaracionEmpleadoContext::LBRACE() {
  return getToken(EvaluacionFisherParser::LBRACE, 0);
}

tree::TerminalNode* EvaluacionFisherParser::DeclaracionEmpleadoContext::RBRACE() {
  return getToken(EvaluacionFisherParser::RBRACE, 0);
}

std::vector<EvaluacionFisherParser::AtributoEmpleadoContext *> EvaluacionFisherParser::DeclaracionEmpleadoContext::atributoEmpleado() {
  return getRuleContexts<EvaluacionFisherParser::AtributoEmpleadoContext>();
}

EvaluacionFisherParser::AtributoEmpleadoContext* EvaluacionFisherParser::DeclaracionEmpleadoContext::atributoEmpleado(size_t i) {
  return getRuleContext<EvaluacionFisherParser::AtributoEmpleadoContext>(i);
}


size_t EvaluacionFisherParser::DeclaracionEmpleadoContext::getRuleIndex() const {
  return EvaluacionFisherParser::RuleDeclaracionEmpleado;
}

void EvaluacionFisherParser::DeclaracionEmpleadoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaracionEmpleado(this);
}

void EvaluacionFisherParser::DeclaracionEmpleadoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaracionEmpleado(this);
}

EvaluacionFisherParser::DeclaracionEmpleadoContext* EvaluacionFisherParser::declaracionEmpleado() {
  DeclaracionEmpleadoContext *_localctx = _tracker.createInstance<DeclaracionEmpleadoContext>(_ctx, getState());
  enterRule(_localctx, 4, EvaluacionFisherParser::RuleDeclaracionEmpleado);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(EvaluacionFisherParser::EMPLEADO);
    setState(65);
    match(EvaluacionFisherParser::IDENTIFICADOR);
    setState(66);
    match(EvaluacionFisherParser::LBRACE);
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(67);
      atributoEmpleado();
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 126976) != 0));
    setState(72);
    match(EvaluacionFisherParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtributoEmpleadoContext ------------------------------------------------------------------

EvaluacionFisherParser::AtributoEmpleadoContext::AtributoEmpleadoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::NOMBRE() {
  return getToken(EvaluacionFisherParser::NOMBRE, 0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::DOSPUNTOS() {
  return getToken(EvaluacionFisherParser::DOSPUNTOS, 0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::CADENA() {
  return getToken(EvaluacionFisherParser::CADENA, 0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::CARGO() {
  return getToken(EvaluacionFisherParser::CARGO, 0);
}

EvaluacionFisherParser::TipoCargoContext* EvaluacionFisherParser::AtributoEmpleadoContext::tipoCargo() {
  return getRuleContext<EvaluacionFisherParser::TipoCargoContext>(0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::EXPERIENCIA() {
  return getToken(EvaluacionFisherParser::EXPERIENCIA, 0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::NUMERO() {
  return getToken(EvaluacionFisherParser::NUMERO, 0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::ANOS() {
  return getToken(EvaluacionFisherParser::ANOS, 0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::AREA() {
  return getToken(EvaluacionFisherParser::AREA, 0);
}

EvaluacionFisherParser::AreaConstructoraContext* EvaluacionFisherParser::AtributoEmpleadoContext::areaConstructora() {
  return getRuleContext<EvaluacionFisherParser::AreaConstructoraContext>(0);
}

tree::TerminalNode* EvaluacionFisherParser::AtributoEmpleadoContext::RENDIMIENTO() {
  return getToken(EvaluacionFisherParser::RENDIMIENTO, 0);
}

EvaluacionFisherParser::NivelRendimientoContext* EvaluacionFisherParser::AtributoEmpleadoContext::nivelRendimiento() {
  return getRuleContext<EvaluacionFisherParser::NivelRendimientoContext>(0);
}


size_t EvaluacionFisherParser::AtributoEmpleadoContext::getRuleIndex() const {
  return EvaluacionFisherParser::RuleAtributoEmpleado;
}

void EvaluacionFisherParser::AtributoEmpleadoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtributoEmpleado(this);
}

void EvaluacionFisherParser::AtributoEmpleadoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtributoEmpleado(this);
}

EvaluacionFisherParser::AtributoEmpleadoContext* EvaluacionFisherParser::atributoEmpleado() {
  AtributoEmpleadoContext *_localctx = _tracker.createInstance<AtributoEmpleadoContext>(_ctx, getState());
  enterRule(_localctx, 6, EvaluacionFisherParser::RuleAtributoEmpleado);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EvaluacionFisherParser::NOMBRE: {
        enterOuterAlt(_localctx, 1);
        setState(74);
        match(EvaluacionFisherParser::NOMBRE);
        setState(75);
        match(EvaluacionFisherParser::DOSPUNTOS);
        setState(76);
        match(EvaluacionFisherParser::CADENA);
        break;
      }

      case EvaluacionFisherParser::CARGO: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        match(EvaluacionFisherParser::CARGO);
        setState(78);
        match(EvaluacionFisherParser::DOSPUNTOS);
        setState(79);
        tipoCargo();
        break;
      }

      case EvaluacionFisherParser::EXPERIENCIA: {
        enterOuterAlt(_localctx, 3);
        setState(80);
        match(EvaluacionFisherParser::EXPERIENCIA);
        setState(81);
        match(EvaluacionFisherParser::DOSPUNTOS);
        setState(82);
        match(EvaluacionFisherParser::NUMERO);
        setState(83);
        match(EvaluacionFisherParser::ANOS);
        break;
      }

      case EvaluacionFisherParser::AREA: {
        enterOuterAlt(_localctx, 4);
        setState(84);
        match(EvaluacionFisherParser::AREA);
        setState(85);
        match(EvaluacionFisherParser::DOSPUNTOS);
        setState(86);
        areaConstructora();
        break;
      }

      case EvaluacionFisherParser::RENDIMIENTO: {
        enterOuterAlt(_localctx, 5);
        setState(87);
        match(EvaluacionFisherParser::RENDIMIENTO);
        setState(88);
        match(EvaluacionFisherParser::DOSPUNTOS);
        setState(89);
        nivelRendimiento();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TipoCargoContext ------------------------------------------------------------------

EvaluacionFisherParser::TipoCargoContext::TipoCargoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EvaluacionFisherParser::TipoCargoContext::INGENIERO() {
  return getToken(EvaluacionFisherParser::INGENIERO, 0);
}

tree::TerminalNode* EvaluacionFisherParser::TipoCargoContext::ARQUITECTO() {
  return getToken(EvaluacionFisherParser::ARQUITECTO, 0);
}

tree::TerminalNode* EvaluacionFisherParser::TipoCargoContext::SUPERVISOR() {
  return getToken(EvaluacionFisherParser::SUPERVISOR, 0);
}

tree::TerminalNode* EvaluacionFisherParser::TipoCargoContext::OPERARIO() {
  return getToken(EvaluacionFisherParser::OPERARIO, 0);
}

tree::TerminalNode* EvaluacionFisherParser::TipoCargoContext::TECNICO() {
  return getToken(EvaluacionFisherParser::TECNICO, 0);
}

tree::TerminalNode* EvaluacionFisherParser::TipoCargoContext::ADMINISTRATIVO() {
  return getToken(EvaluacionFisherParser::ADMINISTRATIVO, 0);
}


size_t EvaluacionFisherParser::TipoCargoContext::getRuleIndex() const {
  return EvaluacionFisherParser::RuleTipoCargo;
}

void EvaluacionFisherParser::TipoCargoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTipoCargo(this);
}

void EvaluacionFisherParser::TipoCargoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<EvaluacionFisherListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTipoCargo(this);
}

EvaluacionFisherParser::TipoCargoContext* EvaluacionFisherParser::tipoCargo() {
  TipoCargoContext *_localctx = _tracker.createInstance<TipoCargoContext>(_ctx, getState());
  enterRule(_localctx, 8, EvaluacionFisherParser::RuleTipoCargo);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8257536) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AreaConstructoraContext ------------------------------------------------------------------
